--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,23 @@
+# macOS
+.DS_Store
 
 # Python cache
 __pycache__/
 *.pyc
 
-# Poetry
-AWSCLIV2.pkg
+# Virtual envs
+.venv/
+venv/
 
-# --- build artifacts (never commit) ---
+# Poetry cache (optional)
+.poetry/
+
+# Build artifacts (never commit)
 **/build/
+**/dist/
+**/*.egg-info/
 **/*.zip
 **/*.pkg
-.DS_Store
-.DS_Store
+
+# Specific artifacts we saw earlier
+AWSCLIV2.pkg
