--- a/services/tool-gateway/Dockerfile
+++ b/services/tool-gateway/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 RUN pip install --no-cache-dir poetry
 
-COPY pyproject.toml poetry.lock* /app/
+COPY pyproject.toml poetry.lock /app/
 
 RUN poetry config virtualenvs.create false \
  && poetry install --no-interaction --no-ansi --no-root
