Agent runtime: FastAPI runtime stable and AgentCore-ready

--- a/services/agent-runtime/Dockerfile
+++ b/services/agent-runtime/Dockerfile
@@ -3,19 +3,17 @@ FROM python:3.11-slim
 WORKDIR /app
 ENV PYTHONPATH=/app
 
-# Install Poetry
 RUN pip install --no-cache-dir poetry
 
-# Copy only dependency files first (better layer caching)
 COPY pyproject.toml poetry.lock* /app/
 
-# Install deps (no project install needed)
 RUN poetry config virtualenvs.create false \
  && poetry install --no-interaction --no-ansi --no-root
 
-# Copy source
 COPY src/ /app/src
 COPY tests/ /app/tests
 
-# Default command (simple; replace later with your real runner)
-CMD ["python", "-c", "from src.graph.build_graph import run_graph; print(run_graph('hello'))"]
+EXPOSE 8080
+
+# Run a server (do NOT run the graph at container boot)
+CMD ["poetry", "run", "uvicorn", "src.app:app", "--host", "0.0.0.0", "--port", "8080"]
